--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,6 @@
     font-size: 50px;
 }
 
-span {
-    font-style: italic;
-}
-
 .main {
     display: flex;
     justify-content: center;
@@ -66,5 +62,5 @@ span {
 }
 
 .title span {
-    color: #003795;
+    color: green;
 }
