--- a/styles/style.css
+++ b/styles/style.css
@@ -133,8 +133,13 @@ body {
     margin-top: 40px;
 }
 
+.car-item-image:hover img {
+    transform: scale(1.3);
+}
+
 .car-item-image img {
     vertical-align: bottom;
+    transition: all .3s;
 }
 
 .car-item-title {
