--- a/cars-app/src/app/app.component.css
+++ b/cars-app/src/app/app.component.css
@@ -103,9 +103,15 @@ body {
     transition: background-color .5s;
 }
 
-.button:hover {
+.button:hover:not(:disabled) {
     cursor: pointer;
     background: #575757;
+}
+
+.button:disabled{
+  cursor: not-allowed;
+  color: gray;
+  background-color: #343434;
 }
 
 .car {
@@ -249,3 +255,13 @@ body {
     font-size: 15px;
     color: #030305;
 }
+
+.price-input.ng-touched.ng-valid {
+  border: 1px solid #5D5D5F;
+}
+
+.price-input.ng-touched.ng-invalid {
+  border: 1px solid red;
+
+}
+
