--- a/cars-app/src/app/app.component.html
+++ b/cars-app/src/app/app.component.html
@@ -48,7 +48,7 @@
     <div class="car-items">
       <div class="car-item" *ngFor="let car of carsData">
         <div class="car-item-image">
-          <img src="../assets/images/{{car.image}}" alt="image1">
+          <img src="{{car.image}}" alt="image1">
         </div>
         <div class="car-item-title">{{car.name}}</div>
         <div class="car-item-info">
