--- a/cars-app/src/app/app.component.html
+++ b/cars-app/src/app/app.component.html
@@ -8,7 +8,7 @@
 <header class="header">
   <div class="container">
     <div class="logo">
-      <img src="../assets/images/logo.png" alt="Лого компании">
+      <img src="assets/images/logo.png" alt="Лого компании">
     </div>
     <nav class="menu">
       <ul>
@@ -53,17 +53,17 @@
         <div class="car-item-title">{{car.name}}</div>
         <div class="car-item-info">
           <div class="car-item-point">
-            <img src="../assets/images/gear.png" alt="gearbox">
+            <img src="assets/images/gear.png" alt="gearbox">
             <div>Привод</div>
             <div>{{car.gear}}</div>
           </div>
           <div class="car-item-point">
-            <img src="../assets/images/wheel.png" alt="wheel">
+            <img src="assets/images/wheel.png" alt="wheel">
             <div>Двигатель</div>
             <div>{{car.engine}}</div>
           </div>
           <div class="car-item-point">
-            <img src="../assets/images/belt.png" alt="belt">
+            <img src="assets/images/belt.png" alt="belt">
             <div>Кол-во мест</div>
             <div>{{car.places}}</div>
           </div>
@@ -87,13 +87,13 @@
       <input type="text" class="price-input" placeholder="Автомобиль, который вас интересует" formControlName="car">
       <button class="button" (click)="onSubmit()" [disabled]="!priceForm.valid">Узнать цену</button>
     </form>
-    <img src="../assets/images/rolls.png" alt="Rolls" class="price-image" [ngStyle]="trans">
+    <img src="assets/images/rolls.png" alt="Rolls" class="price-image" [ngStyle]="trans">
   </div>
 </section>
 <footer class="footer">
   <div class="container">
     <div class="logo">
-      <img src="../assets/images/logo.png" alt="Лого компании">
+      <img src="assets/images/logo.png" alt="Лого компании">
     </div>
     <div class="rights">Все права защинены
     </div>
